kubernetes/apps/security/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-external
  namespace: security
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authelia"
    gethomepage.dev/description: "Authentication Portal"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "authelia.png"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - auth.jgrecu.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 9091
